--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
+    "tesseract.js": "^6.0.1",
     "winston": "^3.18.3"
   }
 }
